--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Customized Border",
+	"name": "Customized AnuPpuccin",
 	"version": "1.0",
 	"minAppVersion": "0.0",
 	"author": "DeeDee111SS",
